# ectrans

./: CMakeLists.txt  ENV_lumi  README_lumi_lam.md  toolchain_lumi.cmake
cmake/: FindOpenACC.cmake  project_summary.cmake
src/: CMakeLists.txt
src/etrans/: CMakeLists.txt
src/etrans/cpu/: CMakeLists.txt
src/etrans/cpu/internal/: eftdir_ctl_mod.F90  eftinv_ctl_mod.F90  eftinvad_mod.F90  eleinv_mod.F90  eltdir_ctl_mod.F90  eltdir_mod.F90  eprfi2_mod.F90  euvtvd_comm_mod.F90
src/etrans/cpu/module/: eftdirad_mod.F90  eledirad_mod.F90
src/etrans/gpu/: CMakeLists.txt
src/etrans/gpu/aux/: ellips.h
src/etrans/gpu/internal/: easre1b_mod.F90  easre1bad_mod.F90  edist_spec_control_mod.F90  efourier_in_mod.F90  efourier_out_mod.F90  efsc_mod.F90  eftdir_ctl_mod.F90  eftdir_ctlad_mod.F90  eftdir_mod.F90  eftdirad_mod.F90  eftinv_ctl_mod.F90  eftinv_ctlad_mod.F90  eftinv_mod.F90  eftinvad_mod.F90  einv_trans_ctl_mod.F90  eledir_mod.F90  eledirad_mod.F90  eleinv_mod.F90  eleinvad_mod.F90  eltdir_ctl_mod.F90  eltdir_ctlad_mod.F90  eltdir_mod.F90  eltinv_ctl_mod.F90  eltinv_ctlad_mod.F90  eltinv_mod.F90  eltinvad_mod.F90  eprfi1b_mod.F90  eprfi2_mod.F90  eprfi2b_mod.F90  eset_resol_mod.F90  espnorm_ctl_mod.F90  espnormc_mod.F90  espnsde_mod.F90  eupdsp_mod.F90  eupdspb_mod.F90  euvtvd_comm_mod.F90  euvtvd_mod.F90  evdtuv_mod.F90  evdtuvad_comm_mod.F90  suefft_mod.F90  (+4 more)
src/etrans/include/etrans/: esetup_trans.h
src/etrans/module/: eftdir_ctlad_mod.F90  eftinv_ctlad_mod.F90  eledir_mod.F90  eleinv_mod.F90  eleinvad_mod.F90  espnorm_ctl_mod.F90
src/etrans/programs/: CMakeLists.txt  aatestprog.F90  test_adjoint.F90
src/programs/: CMakeLists.txt  ectrans-benchmark.F90  ectrans-lam-benchmark.F90
src/trans/: CMakeLists.txt
src/trans/cpu/internal/: fourier_in_mod.F90  ftinv_mod.F90
src/trans/gpu/: CMakeLists.txt
src/trans/gpu/algor/module/: cublas_mod.F90  cuda_device_mod.F90  hipblasSgemmBatched.hip.cpp  rocblasDgemmBatched.cpp  rocblasSgemmBatched.cpp
src/trans/gpu/internal/: asre1b_mod.F90  cuda_gemm_batched_mod.F90  dir_trans_ctl_mod.F90  fourier_in_mod.F90  fourier_out_mod.F90  fsc_mod.F90  ftdir_mod.F90  ftinv_mod.F90  inv_trans_ctl_mod.F90  ldfou2_mod.F90  ledir_mod.F90  leinv_mod.F90  ltdir_ctl_mod.F90  ltinv_ctl_mod.F90  ltinv_mod.F90  prfi1b_mod.F90  prfi2b_mod.F90  set_resol_mod.F90  spnsde_mod.F90  sufft_mod.F90  suleg_mod.F90  tpm_fftc.F90  tpm_ffth.F90  tpm_fftr.F90  tpm_gen.F90  trgtol_mod.F90  trltog_mod.F90  trltom_mod.F90  trmtol_mod.F90  updspb_mod.F90  uvtvd_mod.F90  vdtuv_mod.F90
